objects/DCM_Documents_ARG__c.object
<CustomObject>
    <fields>
        <fullName>AN8_AR__c</fullName>
        <description>AN8 - Customer JDE number</description>
        <label>AN8</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amounttoapply_AR__c</fullName>
        <description>Amount to apply over &apos;NetOpenBalance_AR__c&apos;</description>
        <label>Amount to apply</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AplicationsTXTissued_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the process to generate aplications TXT file has ended</description>
        <label>Aplications TXT issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_AR__c</fullName>
        <description>Bank of collections (for RU documents)</description>
        <label>Bank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryNote_AR__c</fullName>
        <description>Number of Delivery Note (legal document called &quot;Remito&quot;) for Argentina</description>
        <label>Delivery Note</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocAppliedinJDE_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the document has been applied in JDE (by TXT file batch process)</description>
        <label>Doc applied in JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_id_pk_AR__c</fullName>
        <description>Key value to integrate back with &apos;Analítico de Cuenta Corriente&apos;. The value is the concatenation of several JDE fields in the customer ledger: (AN8, Company, Document Type, Document Number, Parcela). The matching field in &apos;Analítico de Cuenta Corriente&apos; is: Internal_id_pk__c</description>
        <externalId>true</externalId>
        <label>Internal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalInvoice_AR__c</fullName>
        <description>Selling legal document (Invoice, Debit &amp; Credit Notes, etc.  There is a fortmat for each document type / country.</description>
        <label>Legal Invoice</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetCRMReceipts_AR__c</fullName>
        <label>Receipts pending in CRM</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetOpenBalance_AR__c</fullName>
        <description>Net outstanding balance considering receipts generated in SF not recorded yet in JDE</description>
        <label>Net Open Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderNumber_AR__c</fullName>
        <description>JDE Order Number (for Invoices)</description>
        <label>Order Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderType_AR__c</fullName>
        <description>JDE Order Type (for Invoices)</description>
        <label>Order Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentID_AR__c</fullName>
        <description>To match the deposits in collection accounts with RU (for the interface with JDE)</description>
        <label>Payment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceiptComments_AR__c</fullName>
        <description>Free text to add any comment to Receipt</description>
        <label>Receipts comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReceiptNo_AR__c</fullName>
        <description>Recipt Number</description>
        <label>Receipt No.</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dataEmissao_AR__c</fullName>
        <description>Document issue date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dataVencimentoAtual_AR__c</fullName>
        <description>Document actual due date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dataVencimentoOriginal_AR__c</fullName>
        <description>Document original due date</description>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>observacoesTitulo_AR__c</fullName>
        <description>Free text to add any comment to document</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tipoDocumento_AR__c</fullName>
        <description>Document Type</description>
        <label>Document Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>valorOriginalTitulo_AR__c</fullName>
        <description>Original document amount</description>
        <label>Original Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>valorSaldo_AR__c</fullName>
        <description>Outstanding balance amount</description>
        <label>Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LAT Document</label>
    <nameField>
        <label>Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Documents</pluralLabel>
    <recordTypes>
        <fullName>DCM_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCM_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DCM_VR01_ValidationAmountToApply_AR</fullName>
        <active>true</active>
        <description>The &apos;Amount to apply&apos; cannot be greater than the &apos;Net Open Balance&apos;.</description>
        <errorConditionFormula>ISCHANGED(Amounttoapply_AR__c)
&amp;&amp;
NOT(ISPICKVAL(ReceiptNo_AR__r.Status_AR__c,&apos;Receipt cancelled&apos;))
&amp;&amp;
(
Amounttoapply_AR__c = 0
||
NetOpenBalance_AR__c  = 0
||
(Amounttoapply_AR__c  &lt; 0 &amp;&amp; NetOpenBalance_AR__c  &gt; 0)
||
(Amounttoapply_AR__c &gt; 0 &amp;&amp; NetOpenBalance_AR__c  &lt; 0)
||
(Amounttoapply_AR__c &lt; 0 &amp;&amp; NetOpenBalance_AR__c  &lt; 0 &amp;&amp; (Amounttoapply_AR__c &lt; NetOpenBalance_AR__c))
||
(Amounttoapply_AR__c &gt; 0 &amp;&amp; NetOpenBalance_AR__c  &gt; 0 &amp;&amp; (Amounttoapply_AR__c &gt; NetOpenBalance_AR__c))
)</errorConditionFormula>
        <errorDisplayField>Amounttoapply_AR__c</errorDisplayField>
        <errorMessage>The value cannot be applied. Check the value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCM_VR02_ValidAmountToApplyTypeRU_AR</fullName>
        <active>true</active>
        <description>The &apos;Amount to apply&apos; of a record with Document Type &apos;RU&apos; cannot be modified.</description>
        <errorConditionFormula>ISCHANGED (Amounttoapply_AR__c)
&amp;&amp;
tipoDocumento_AR__c = &apos;RU&apos;
&amp;&amp;
NOT(ISPICKVAL(ReceiptNo_AR__r.Status_AR__c,&apos;Receipt cancelled&apos;))</errorConditionFormula>
        <errorDisplayField>Amounttoapply_AR__c</errorDisplayField>
        <errorMessage>The value cannot be modified in a Document Type &apos;RU&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCM_VR03_CantEditName_AR</fullName>
        <active>true</active>
        <description>Users can&apos;t modify registry name, except the administrator</description>
        <errorConditionFormula>IF( NOT(OR($Profile.Name=&apos;System Administrator&apos;, $Profile.Name=&apos;AR_System Administrator&apos;,$Profile.Name=&apos;LAT_SystemAdministrator&apos;)) , IF( ISCHANGED(Name) 
, true, false) 
, false)</errorConditionFormula>
        <errorMessage>Users can&apos;t modify the registry name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_DCM_VR04_Type_RU_AR</fullName>
        <active>true</active>
        <description>Records with Document Type &apos;RU&apos; cannot be modified by sales.</description>
        <errorConditionFormula>OR($Profile.Name=&apos;AR_Vendedor&apos;,$Profile.Name=&apos;UY_Vendedor&apos;,$Profile.Name=&apos;LAT_UY2_Vendedor&apos;,$Profile.Name=&apos;LAT_AR2_Vendedor&apos;)
&amp;&amp;
NOT(ISPICKVAL(ReceiptNo_AR__r.Status_AR__c,&apos;Receipt cancelled&apos;))
&amp;&amp;
tipoDocumento_AR__c = &apos;RU&apos;
&amp;&amp;
NOT(ISNEW())</errorConditionFormula>
        <errorMessage>RU Documents can not be modified</errorMessage>
    </validationRules>
</CustomObject>